syntax = "proto3";

package api;
option go_package = "github.com/Ahmed-I-Abdullah/p2p-code-collaboration/pb";

service Election {
    rpc Election(ElectionRequest) returns (ElectionResponse);
    rpc LeaderAnnouncement(LeaderAnnouncementRequest) returns (LeaderAnnouncementResponse);
}

enum ElectionType {
    SUCCESS = 0;
    BULLY = 1;
    OTHER = 2;
}

message ElectionRequest {
    string nodeId = 1;
    string repoName = 2;
}

message ElectionResponse {
    string type = 1;
    string newLeaderId = 2;
}


message LeaderAnnouncementRequest {
    string leaderId = 1;
    string repoName = 2;
}

message LeaderAnnouncementResponse {}
