syntax = "proto3";

package api;
option go_package = "github.com/Ahmed-I-Abdullah/p2p-code-collaboration/pb";

service Repository {
    rpc Init(RepoInitRequest) returns (RepoInitResponse);
    rpc Pull(RepoPullRequest) returns (RepoPullResponse);
    rpc GetLeaderUrl(LeaderUrlRequest) returns (LeaderUrlResponse);
    rpc RequestToPull(RequestToPullRequest) returns (RequestToPullResponse);
    rpc NotifyPushCompletion(NotifyPushCompletionRequest) returns (NotifyPushCompletionResponse);
}

message RepoInitRequest {
    string name = 1;
    bool from_cli = 2;
}

message RepoInitResponse {
    bool success = 1;
    string message = 2;
}

message RepoPullRequest {
    string name = 1;
}

message RepoPullResponse {
    bool success = 1;
    string repoAddress = 2;
}

message RepoPushRequest {
    string name = 1;
}

message RepoPushResponse {
    bool success = 1;
    string message = 2;
}

message LeaderUrlRequest {
    string name = 1;
}

message LeaderUrlResponse {
    bool success = 1;
    string name = 2;
    string gitRepoAddress = 3;
    string grpcAddress = 4;
}

message NotifyPushCompletionRequest {
    string name = 1;
}

message NotifyPushCompletionResponse {
    bool success = 1;
    string message = 2;
}

message RequestToPullRequest {
    string name = 1;
    string gitAddress = 2;
}

message RequestToPullResponse {
    bool success = 1;
}
